# trading-bot

./: .dockerignore  .env.example  .gitignore  AGENTS.md  AUDIT.md  AUDIT_V2.md  BUGS.md  CLAUDE.md  Dockerfile  MONITOR.md  README.md  SPRINT_PLAN.md  docker-compose.dev.yml  docker-compose.monitoring.yml  docker-compose.prod.yml  docker-compose.yml  pyproject.toml  pytest.ini  requirements.txt
.github/workflows/: test.yml
binance-bot/: Dockerfile  README.md  docker-compose.dev.yml  docker-compose.monitoring.yml  docker-compose.prod.yml  docker-compose.yml  pyproject.toml  requirements.txt
binance-bot/docs/: SESSION_LOG.md  deployment.md  instruments.md  project-plan.md
binance-bot/monitoring/grafana/dashboards/: trading-bot.json
binance-bot/monitoring/grafana/provisioning/dashboards/: dashboards.yml
binance-bot/monitoring/prometheus/: prometheus.yml
binance-bot/scripts/: run_ai_grid.py  run_backtest.py  run_backtest_series.py  run_bot.py  run_dashboard.py  run_grid_simple.py  run_optimization.py  run_paper_trading.py  test_ai.py
binance-bot/src/binance_bot/: __init__.py  bot.py  main.py
binance-bot/src/binance_bot/core/: __init__.py  data_collector.py  emergency.py  exchange.py  order_manager.py  position_manager.py
binance-bot/src/binance_bot/strategies/: __init__.py  ai_grid.py  base.py  grid.py
docker/: Dockerfile
docs/: BUGS.md  RESEARCH.md  SIMPLIFICATION_REPORT.md  SPRINT_CHECKLIST.md  STATUS.md  exchanges.md  feature-daily-summary-trade-amount-plan.md  feature-enrich-bot-messages-plan.md  feature-enrich-bot-messages-validated.md  hotfix-ai-timeout-resilience-plan.md  hotfix-llm-timeout-60-plan.md  market-research-2024-2025.md  project-plan.md  sprint-24-plan.md  sprint-25-plan.md  sprint-26-plan.md  sprint-27-plan.md  sprint-28-plan.md  sprint-29-plan.md  sprint-30-plan.md  sprint-31-plan.md  strategies.md
docs/analysis/: jesse-comparison.md  migration-plan.md
jesse-bot/: .env.example  CHANGELOG.md  config.py  live_config.py  live_trader.py  requirements.txt  routes.py  state_provider.py
jesse-bot/docker/: docker-compose.yml
jesse-bot/docs/: optimization-results.md
jesse-bot/scripts/: run_backtest.py  start_live.sh
jesse-bot/strategies/: __init__.py
jesse-bot/tests/: __init__.py  conftest.py  test_alerts_state.py  test_api.py  test_factors_sentiment.py  test_integration.py  test_live_config.py  test_live_mode.py  test_safety.py  test_sprint25.py  test_strategy.py
polymarket-bot/: .env.example  Dockerfile  README.md  pyproject.toml
polymarket-bot/src/polymarket_bot/: __init__.py
polymarket-bot/src/polymarket_bot/core/: __init__.py
polymarket-bot/src/polymarket_bot/strategies/: __init__.py
scripts/: backup_db.py  run_ai_grid.py  run_backtest.py  run_backtest_series.py  run_bot.py  run_bot_force.py  run_bot_noai.py  run_dashboard.py  run_grid_simple.py  run_paper_trading.py  test_ai.py  worktree.sh
shared/: REVIEW.md  __init__.py  constants.py  requirements.txt
shared/ai/: __init__.py  agent.py  parsing.py  prompts.py
shared/alerts/: __init__.py  discord.py  email.py  manager.py  rules.py  telegram.py
shared/api/: __init__.py  auth.py  main.py
shared/backtest/: __init__.py  benchmark.py  charts.py  engine.py
shared/config/: __init__.py  settings.py
shared/core/: __init__.py  database.py  indicators.py  state.py
shared/dashboard/: __init__.py  app.py
shared/factors/: __init__.py  factor_calculator.py  factor_strategy.py
shared/indicators/: __init__.py  correlation.py  custom.py  momentum.py  multi_timeframe.py  pattern.py  support_resistance.py  trend.py  volatility.py  volume.py
shared/monitoring/: __init__.py  (+1 more)
tests/: conftest.py
(+148 files in other folders)
