[project]
name = "polymarket-bot"
version = "0.1.0"
description = "AI-assisted Polymarket Prediction Markets Bot"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    # Polymarket SDK (TODO: add when available)
    "httpx>=0.27.0",
    "pandas>=2.2.0",
    "python-dotenv>=1.0.0",
    "sqlalchemy>=2.0.0",
    "numpy>=2.0.0",
    "loguru>=0.7.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.6.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
